chore(ci): use semantic-release shareable config, noissue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - attach_workspace:
           at: ~/repo
       - checkout
-      - run: npm run semantic-release
+      - run: npx semantic-release
 
 workflows:
   version: 2
