--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,61 +1,35 @@
-defaults: &defaults
-  working_directory: ~/repo
-  docker:
-    - image: circleci/node:17
+version: 2.1
 
-version: 2
+orbs:
+  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
+  node: circleci/node@5.0.0
+
+executors:
+    default:
+        docker:
+            - image: cimg/node:lts
+
 jobs:
-  checkout_code:
-    <<: *defaults
-    steps:
-      - checkout
-      - persist_to_workspace:
-          root: ~/repo
-          paths:
-            - .
+    test:
+        executor: default
+        steps:
+            - checkout
+            - node/install-packages
+            - run: npm run lint
+            - run: npm run test:json
 
-  test:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: install dependencies with npm
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: Lint
-          command: npm run lint
-      - run:
-          name: Test
-          command: npm run test:json
-      - persist_to_workspace:
-          root: ~/repo
-          paths:
-            - node_modules
-
-  release:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      - checkout
-      - run: npx semantic-release
+    release:
+        executor: default
+        steps:
+            - checkout
+            - node/install-packages
+            - run: npx semantic-release
 
 workflows:
-  version: 2
-  build:
-    jobs:
-      - checkout_code
-      - test:
-          requires:
-            - checkout_code
-      - release:
-          context: org-global
-          requires:
+    build:
+        jobs:
             - test
+            - release:
+                  context: org-global
+                  requires:
+                      - test
