--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,61 @@
-version: 2.1
+defaults: &defaults
+  working_directory: ~/repo
+  docker:
+    - image: circleci/node:17
 
-orbs:
-  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
-  node: circleci/node@4.1
-executors:
-    default:
-        docker:
-            - image: cimg/node:lts
-
+version: 2
 jobs:
-    test:
-        executor: default
-        steps:
-            - checkout
-            - node/install-packages
-            - run: npm run lint
-            - run: npm run test:json
+  checkout_code:
+    <<: *defaults
+    steps:
+      - checkout
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - .
 
-    release:
-        executor: default
-        steps:
-            - checkout
-            - node/install-packages
-            - run: npx semantic-release
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: install dependencies with npm
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - ./node_modules
+      - run:
+          name: Lint
+          command: npm run lint
+      - run:
+          name: Test
+          command: npm run test:json
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - node_modules
+
+  release:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - checkout
+      - run: npx semantic-release
 
 workflows:
-    build:
-        jobs:
+  version: 2
+  build:
+    jobs:
+      - checkout_code
+      - test:
+          requires:
+            - checkout_code
+      - release:
+          context: org-global
+          requires:
             - test
-            - release:
-                  context: org-global
-                  requires:
-                      - test
