--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
-    "semantic-release": "semantic-release",
     "test": "mocha",
     "test:json": "mocha --reporter json"
   },
@@ -24,19 +23,18 @@
   },
   "homepage": "https://github.com/5app/logger#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.0.0",
+    "@5app/semantic-release-config": "^1.0.0",
+    "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@semantic-release/changelog": "^6.0.0",
-    "@semantic-release/git": "^10.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-5app": "^0.15.0",
+    "eslint": "^8.8.0",
+    "eslint-config-5app": "^0.16.2",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^12.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
     "mocha": "^9.0.0",
-    "semantic-release": "^19.0.0",
-    "sinon": "^13.0.0"
+    "semantic-release": "^19.0.2",
+    "sinon": "^13.0.1"
   },
   "lint-staged": {
     "*.js": "eslint"
@@ -63,29 +61,10 @@
     }
   },
   "release": {
-    "branch": "master",
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      {
-        "path": "@semantic-release/git",
-        "assets": [
-          "package.json",
-          "package-lock.json",
-          "CHANGELOG.md"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github"
-    ]
+    "extends": "@5app/semantic-release-config"
   },
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.2"
   },
   "publishConfig": {
     "access": "public"
