--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,6 @@ workflows:
         jobs:
             - test
             - release:
-                  context: org-global
+                  context: github-release
                   requires:
                       - test
