--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.3.1",
   "description": "Simple logger used in 5app microservices",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "test": "mocha",
