--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
 	"root": true,
-	"extends": "5app",
-	"plugins": [
-		"promise",
-		"security"
-	],
+	"extends": ["5app", "prettier"],
+	"plugins": ["promise", "security", "prettier"],
 	"env": {
 		"mocha": true
 	},
