--- a/package.json
+++ b/package.json
@@ -1,70 +1,75 @@
 {
-  "name": "@5app/logger",
-  "version": "2.3.1",
-  "description": "Simple logger used in 5app microservices",
-  "main": "src/index.js",
-  "type": "module",
-  "scripts": {
-    "lint": "eslint .",
-    "test": "mocha",
-    "test:json": "mocha --reporter json"
-  },
-  "files": [
-    "src/"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/5app/logger.git"
-  },
-  "keywords": [
-    "logs",
-    "logger"
-  ],
-  "author": "5app",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/5app/logger/issues"
-  },
-  "homepage": "https://github.com/5app/logger#readme",
-  "devDependencies": {
-    "@5app/semantic-release-config": "^1.1.0",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "eslint": "^8.50.0",
-    "eslint-config-5app": "^0.19.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security": "^1.7.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "mocha": "^10.2.0",
-    "semantic-release": "^22.0.5",
-    "sinon": "^16.0.0"
-  },
-  "lint-staged": {
-    "*.js": "eslint"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ],
-    "rules": {
-      "subject-case": [
-        2,
-        "never",
-        [
-          "start-case",
-          "pascal-case"
-        ]
-      ]
-    }
-  },
-  "release": {
-    "extends": "@5app/semantic-release-config"
-  },
-  "dependencies": {
-    "chalk": "^5.3.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "@5app/logger",
+	"version": "2.3.1",
+	"description": "Simple logger used in 5app microservices",
+	"main": "src/index.js",
+	"type": "module",
+	"scripts": {
+		"lint": "eslint .",
+		"test": "mocha",
+		"test:json": "mocha --reporter json"
+	},
+	"files": [
+		"src/"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/5app/logger.git"
+	},
+	"keywords": [
+		"logs",
+		"logger"
+	],
+	"author": "5app",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/5app/logger/issues"
+	},
+	"homepage": "https://github.com/5app/logger#readme",
+	"devDependencies": {
+		"@5app/prettier-config": "^1.0.4",
+		"@5app/semantic-release-config": "^1.1.0",
+		"@commitlint/cli": "^17.7.2",
+		"@commitlint/config-conventional": "^17.7.0",
+		"eslint": "^8.50.0",
+		"eslint-config-5app": "^0.19.1",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-security": "^1.7.1",
+		"husky": "^8.0.3",
+		"lint-staged": "^14.0.1",
+		"mocha": "^10.2.0",
+		"prettier": "^3.0.3",
+		"semantic-release": "^22.0.5",
+		"sinon": "^16.0.0"
+	},
+	"lint-staged": {
+		"*.js": "eslint"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		],
+		"rules": {
+			"subject-case": [
+				2,
+				"never",
+				[
+					"start-case",
+					"pascal-case"
+				]
+			]
+		}
+	},
+	"release": {
+		"extends": "@5app/semantic-release-config"
+	},
+	"prettier": "@5app/prettier-config",
+	"dependencies": {
+		"chalk": "^5.3.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
