--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": ["5app", "prettier"],
-	"plugins": ["promise", "security", "prettier"],
+	"plugins": ["security", "prettier"],
 	"env": {
 		"mocha": true
 	},
